--- a/gb/24/11/27/n14380233.md
+++ b/gb/24/11/27/n14380233.md
@@ -6,10 +6,10 @@
 <h6>2024年2月5日，北京一家周大福珠宝店内的一名顾客在浏览黄金首饰。(Jade Gao/AFP via Getty Images)
 </h6>
 <hr>
-	<p>【大纪元2024年11月28日讯】（大纪元记者李冰综合报导）近期，中国黄金珠宝上市公司的业绩普遍下滑，并且持续关闭门店。本周二（26日），周大福和六福集团分别发布了中期业绩报告，周大福上半年净关闭239个零售点，六福集团上半年净减少175间店铺，总计减少414家。</p>
+	<p>【大纪元2024年11月28日讯】（大纪元记者李冰综合报导）近期，中国黄金珠宝上市公司的业绩普遍下滑，门店持续关闭。本周二（26日），周大福和六福集团分别发布了中期业绩报告，周大福上半年净关闭239个零售点，六福集团上半年净减少175间店铺，总计减少414家。</p>
 <p>作为中国最大的珠宝商，周大福周二发布了2025财政年度上半年（截至2024年9月30日六个月）业绩公告。公告显示，当期周大福营业额为394.08亿港元，同比下降20.4%。其中，内地下跌18.8%。</p>
 <p>当期，该公司净利润为25.3亿港元，同比下降44.4%，周大福称主要归因于期内国际金价大幅波动，以致重估黄金借贷合约产生亏损，而去年同期则录得黄金借贷重估收益。</p>
-<p>对于2025财年中国内地黄金、银和珠宝零售总额的下跌，周大福在财报中称，此市况与其观察一致，鉴于金价升至历史高位，内地部分消费者对购买黄金首饰持观望态度。</p>
+<p>对于2025财年中国内地黄金、银和珠宝零售总额的下跌，周大福在财报中称，此市况与其观察一致，鉴于金价升至历史高位，内地部分消费者对购买黄金首饰持观望态度。（<strong>延伸阅读：<span style="color: #0000ff;"><a style="color: #0000ff;" href=><a href="https://github.com/1992513/djy/blob/master/gb/24/10/23/n14355977.md#1" target="_blank" rel="noopener">中国黄金消费下降 周大福等珠宝商掀闭店潮</a></span></strong>）</p>
 <p>财报显示，截至2024年9月末，周大福在中国内地的珠宝零售点共有6968个，其中约77%为加盟店。期内，珠宝零售点净关闭239个。</p>
 <p>另一家港股上市的黄金珠宝企业六福集团，其披露的中期业绩公告显示，报告期内，六福集团实现收入54.49亿港元，同比减少27.2%；经营溢利5.36亿港元，同比减少53%；期内溢利4.17亿港元，同比减少55.7%。</p>
 <p>分产品来看，报告期内，六福集团黄金及铂金产品销售额同比减少24.1%至36.89亿港元，包括钻石产品在内的定价首饰销售额同比下跌34.8%至13.56亿港元。</p>
@@ -18,35 +18,42 @@
 <p>谢瑞麟关闭了位于中国内地及香港的多家亏损及表现较逊的零售店。</p>
 <p>另外一家中国珠宝品牌周大生披露的2024年半年报显示，该公司上半年归属于上市公司股东的净利润6.01亿元，同比下降18.71%。</p>
 <p>责任编辑：李宇圆#</p>
-	
+<div class="related-article" style="display: block;"><span style="color: #000;font-weight:bold;">推荐阅读：</span></div>
+<ul class="related-posts"style="color: #0000ff; list-style: inside;">
+<li><span style="font-weight:bold;display: inline-block;"><a style="color: #0000ff; " href=><a href="https://github.com/1992513/djy/blob/master/gb/24/3/27/n14212276.md#1" target="_blank" rel="noopener">中国多家金店关门 民众寄存4亿元黄金没了</a></span></li>
+<li><span style="font-weight:bold;display: inline-block;"><a style="color: #0000ff; " href=><a href="https://github.com/1992513/djy/blob/master/gb/24/8/26/n14318154.md#1" target="_blank" rel="noopener">经济萧条下 小中产穷游 底层民众苦水泡黄连</a></span></li>
+<li><span style="font-weight:bold;display: inline-block;"><a style="color: #0000ff; " href=><a href="https://github.com/1992513/djy/blob/master/gb/24/11/17/n14372754.md#1" target="_blank" rel="noopener">华侨控股5吨黄金蒸发 3名高管秘密潜逃海外</a></span></li>
+<li><span style="font-weight:bold;display: inline-block;"><a style="color: #0000ff; " href=><a href="https://github.com/1992513/djy/blob/master/gb/24/8/29/n14320541.md#1" target="_blank" rel="noopener">中国银行倒闭潮或累及港银 比较各国存款保障额</a></span></li>
+<li><span style="font-weight:bold;display: inline-block;"><a style="color: #0000ff; " href=><a href="https://github.com/1992513/djy/blob/master/gb/24/4/2/n14216696.md#1" target="_blank" rel="noopener">金价暴涨 金店关门 大陆财经人士拆解骗局</a></span></li>
+</ul>
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/18/11/30/n10882432.md#1">周大福首三季赚8.8% 预期明下半年放缓</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/20/1/15/n11793796.md#1">周大福拟关闭香港不多于15间分店</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/10/n14287318.md#1">周大福业绩下滑 市值蒸发200亿</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/11/n14327964.md#1">周大福珠宝中环全新概念店开幕 五年内将全面转型</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/5/25/n10427499.md#1" target="_blank">严家伟：文革中的监狱往事</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/5/27/n7938314.md#1" target="_blank">摆脱10多年严重湿疹的折磨</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/16/n10061771.md#1" target="_blank">共产暴政录：拼音化与简化汉字</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/10/24/n10804401.md#1" target="_blank">这些前中共警察所见证的奇迹</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/10/13/n10781787.md#1">苏轼美食路线图：猪羊肉鲜果牡蛎</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/20/12/16/n12625448.md#1">【元曲大家】马致远的命运三部曲</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/13/n14370473.md#1">喜获新生儿古礼民俗 “抓周”准不准呢？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/22/n14376606.md#1">【未解之谜】史前文明存在的铁证？“时空错乱”的神秘文物</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/26/n14379252.md#1">《你在哪里》：当真相成为罪行 该如何捍卫正义？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/27/n14380092.md#1">【马克时空】被FPV无人机反制 俄军柳叶刀受挫</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/27/n14379400.md#1">【财经非常道】川普提名贝森特 华尔街松口气</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/31/n14361853.md#1">【环球直击】川普：上任当天对华加关税</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/25/n14377818.md#1">新疆音乐人举报刀郎剽窃 刀郎公司回应</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/20/n14375097.md#1">红三代迎娶台湾蓝三代 薄瓜瓜成台湾女婿</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/24/n14377493.md#1">高盛CEO：全球投资人很难把钱汇出中国</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/25/n14378561.md#1">黄晓明新片上映9天被下架 票房仅410万人民币</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/26/n14378650.md#1">周星驰《女足》演员阵容引关注 宋康昊或参演</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/25/n14378605.md#1">谭咏麟紧急喊停大陆个唱 憔悴露面透露病情</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/25/n14378221.md#1">受台日棒球赛事冲击 金马61收视比往年低</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/26/n14378904.md#1">韩剧《爱在独木桥》播出两集 收视率翻倍成长</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/21/n14375246.md#1">为什么说咖啡给你的能量只是借给你的</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/17/n14372623.md#1">秋冬必吃十种润肺抗炎饮食 提升免疫功能</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/25/n14378137.md#1">专家：睡觉时整晚开着暖气 破财又伤身</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/21/n14375220.md#1">50岁后健康不走下坡路 四招抗老这样做</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/25/n14377948.md#1">102岁人瑞护肤之道 不是靠抗衰老面霜噢！</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545644.md#1">【未解之谜】古墓竹简惊现秦朝真相 我们都被教科书骗了？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14533738.md#1">太子密谋造反 李渊轻诺废储 李世民回朝只是付诸一笑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543500.md#1">【未解之谜】深度解读《天使的遗言》使命与未来 龙树谅传递的终极信息</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/21/n14395345.md#1">【古道人生】对人宽和仁厚最终救了自己两次命</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541303.md#1">浮生行吟：说说两个“字”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/6/n14546042.md#1">【唐青看时事】王毅说漏嘴：无法接受俄战败</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545497.md#1">【军事情报局】歼-10竟然仿自以色列狮式战机</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545198.md#1">【车评】越野猛兽  2025 Toyota Tundra TRD Rally</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545082.md#1">沈舟：中共航母编队到香港 党媒泄老底</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544964.md#1">近千家A股公司涉机器人业务 专家：资本在套利</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545439.md#1">中国出生率骤降 教师“铁饭碗”不再稳固</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545646.md#1">吴谨言复出遇阻？传大陆演员35岁起禁演古偶剧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545591.md#1">杨幂上台不慎踩裙?跌倒 临场反应令人惊叹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544376.md#1">章子怡《酱园弄》上映 9岁女儿客串不怯场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545630.md#1">陈思诚新片票房惨淡 上映首日9小时仅卖395万</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544400.md#1">好莱坞男星麦可·麦德森骤逝 享寿67岁</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544650.md#1">煎蛋不必翻面 专家分享不用油或黄油的妙招</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/6/n14545808.md#1">在正确时间帮植物浇水 避免引发真菌疾病</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542256.md#1">避免洗肾 中医传统疗法助肾功能回升</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542657.md#1">香蕉的颜色和斑点透露了什么</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542663.md#1">苦味可能对改善消化和血糖至关重要</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/11/27/n14380233.htm">中国珠宝商现关店潮 周大福与六福合计关414家</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/11/27/n14380233.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
